--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 #footer {
     width: 100%;
     height: 80px;
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
