--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,6 +1,6 @@
 .home-container {
     width: 100%;
-    height: auto;
+    height: 100vh;
     padding: 50px 10%;
     display: flex;
     flex-direction: row;
