--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100px;
   padding: 15px 10%;
+  background-color: #fff;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -87,6 +88,32 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 22px;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.button-search:hover{
+  background: #0d3b7c;
+}
+
+.button-clear {
+  background: #ec8f15;
+  border-radius: 8px;
+  color: #fff;
+  border: none;
+  width: 94px;
+  height: 40px;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.button-clear:hover {
+  background: #b96900;
 }
 
 /* RESPONSIVE */
