--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,6 +1,6 @@
 .home-container {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     padding: 50px 10%;
     display: flex;
     flex-direction: row;
@@ -12,7 +12,7 @@
 
 @media (min-width: 1441px){
     .home-container {
-        pad: 50px 30%;
+        padding: 50px 20%;
     }
 }
 
@@ -20,4 +20,5 @@
     .home-container{
         padding: 50px 10px;
     }
+
 }
